...
  private val validationErrorTextView
    get() = binding.validationErrorTextView

  private val nextButtonFrame
    get() = binding.nextButtonFrame

  private val nextButton
    get() = binding.nextButton

  @Inject
  lateinit var router: Router

  @Inject
...
