...
  Scaffold(
      modifier = Modifier
          .fillMaxSize()
          .then(modifier),
      bottomBar = {
        FilledButtonWithFrame(
            testTag = "getStartedButton",
            onClick = onGetStartedClick,
        ) {
          Text(
              text = stringResource(R.string.onboarding_get_started).uppercase()
          )
        }
...
