...
    onAccept: () -> Unit
) {
  Scaffold(
      modifier = modifier,
      bottomBar = {
        FilledButtonWithFrame(
            testTag = "agreeAndContinue",
            onClick = onAccept
        ) {
          Text(text = stringResource(id = R.string.data_protection_consent_accept_button))
        }
      }
  ) { paddingValues ->
...
