...
  private val dismissApprovedStatusButton
    get() = userStatusApproved.dismissApprovedStatusButton

  private val userAwaitingSmsVerification
    get() = binding.userAwaitingSmsVerification

  private val enterCodeButton
    get() = userAwaitingSmsVerification.enterCodeButton

  private val scanSimpleCardButton
    get() = binding.scanSimpleCardButton

  private val syncIndicator
...
